[package]
name = "tiktok"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
itoa = "1.0.11"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = [ "cookies", "json", "http2" ], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = [ "rt" ] }
url = { version = "2.5.0", features = [ "serde" ] }
uuid = { version = "1.8.0", features = [ "v4" ] }

[dev-dependencies]
tokio = { version = "1.37.0", features = [ "macros" ] }

[features]
default = ["native-tls"]

native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
