[package]
name = "tiktok"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
itoa = "1.0.15"
once_cell = "1.21.3"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = [ "cookies", "json", "http2" ], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [ "rt" ] }
url = { version = "2.5.7", features = [ "serde" ] }
uuid = { version = "1.19.0", features = [ "v4" ] }

[dev-dependencies]
tokio = { version = "1.48.0", features = [ "macros" ] }

[features]
default = ["native-tls"]

native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
