[package]
name = "tiktok"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
itoa = "1.0.17"
once_cell = "1.21.3"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = [ "cookies", "json", "http2" ], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [ "rt" ] }
url = { version = "2.5.8", features = [ "serde" ] }
uuid = { version = "1.21.0", features = [ "v4" ] }

[dev-dependencies]
tokio = { version = "1.49.0", features = [ "macros" ] }

[features]
default = ["native-tls"]

native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]
