[package]
name = "tikwm"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.12.24", features = [ "json" ], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
url = "2.5.7"

[features]
default = [
    "rustls-tls",
]
native-tls = [
    "reqwest/native-tls",
]
rustls-tls = [
    "reqwest/rustls-tls",
]

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros"] }
