[package]
name = "tikwm"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.12.28", features = [ "json" ], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
url = "2.5.8"

[features]
default = [
    "rustls-tls",
]
native-tls = [
    "reqwest/native-tls",
]
rustls-tls = [
    "reqwest/rustls-tls",
]

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros"] }
